fix cell overflow

--- a/style.css
+++ b/style.css
@@ -34,4 +34,7 @@ main {
 	flex-direction: row;
 	flex-wrap: wrap;
 	align-content: flex-start;
+	cursor: crosshair;
+}
+.cell {
 }
